Remove resources, add deploy mode, update turbine-core proto (#3)
* remove resources

* proto changes

* proto changes

* rename package

* implement proto changes

* cleanup

* fix: proto

* fix: compile and updates setRecords

* update proto and fix configurations

* fix compilation

---------

Co-authored-by: Raúl Barroso <ra.barroso@gmail.com>