@@ -1,42 +1,39 @@
-package com.meroxa.turbine.local;
-
-import com.google.protobuf.ByteString;
-import com.google.protobuf.Timestamp;
-import com.meroxa.turbine.*;
-import com.meroxa.turbine.proto.Collection;
-import com.meroxa.turbine.proto.ProcessCollectionRequest;
-import com.meroxa.turbine.proto.Record;
-import com.meroxa.turbine.proto.TurbineServiceGrpc;
-import lombok.AllArgsConstructor;
-import lombok.Getter;
+package com.meroxa.turbine.run;
 
 import java.time.LocalDateTime;
 import java.time.ZoneOffset;
 import java.util.List;
+import java.util.Map;
 import java.util.stream.Collectors;
+
+import com.google.protobuf.ByteString;
+import com.google.protobuf.Timestamp;
+import com.meroxa.turbine.Processor;
+import com.meroxa.turbine.RecordsCollection;
+import com.meroxa.turbine.TurbineRecord;
+import com.meroxa.turbine.Utils;
+import com.meroxa.turbine.proto.*;
+import com.meroxa.turbine.proto.Record;
+import lombok.AllArgsConstructor;
+import lombok.Getter;
 
 @AllArgsConstructor
 @Getter
-public class LocalRecords implements Records {
-    private final TurbineServiceGrpc.TurbineServiceBlockingStub stub;
-    private final Collection collection;
-    private final String name;
-    private final String stream;
+public class LocalRecordsCollection implements RecordsCollection {
+    private final TurbineServiceGrpc.TurbineServiceBlockingStub coreClient;
     private final List<TurbineRecord> records;
 
-    public static LocalRecords fromProtoCollection(TurbineServiceGrpc.TurbineServiceBlockingStub stub, Collection collection) {
-        return new LocalRecords(
+    public static LocalRecordsCollection fromProtoCollection(TurbineServiceGrpc.TurbineServiceBlockingStub stub,
+                                                             com.meroxa.turbine.proto.RecordsCollection collection) {
+        return new LocalRecordsCollection(
             stub,
-            collection,
-            collection.getName(),
-            collection.getStream(),
             toTurbineRecords(collection.getRecordsList())
         );
     }
 
     public static List<TurbineRecord> toTurbineRecords(List<Record> protoRecords) {
         return Utils.toStream(protoRecords)
-            .map(LocalRecords::toTurbineRecord)
+            .map(LocalRecordsCollection::toTurbineRecord)
             .collect(Collectors.toList());
     }
 
@@ -57,25 +54,22 @@ public class LocalRecords implements Records {
     }
 
     @Override
-    public Records process(Processor processor) {
-        ProcessCollectionRequest req = ProcessCollectionRequest
+    public RecordsCollection process(Processor processor) {
+        ProcessRecordsRequest req = ProcessRecordsRequest
             .newBuilder()
             .setProcess(
-                ProcessCollectionRequest.Process
+                ProcessRecordsRequest.Process
                     .newBuilder()
                     .setName("turbinehellojava")
                     .build()
             )
-            .setCollection(collection)
+            .setRecords(com.meroxa.turbine.proto.RecordsCollection.newBuilder().addAllRecords(getProtoRecords()).build())
             .build();
 
-        Collection response = stub.addProcessToCollection(req);
+        com.meroxa.turbine.proto.RecordsCollection response = coreClient.process(req);
 
-        return new LocalRecords(
-            stub,
-            collection,
-            name,
-            stream,
+        return new LocalRecordsCollection(
+            coreClient,
             process(records, processor)
         );
     }
@@ -84,14 +78,12 @@ public class LocalRecords implements Records {
         return Utils.toStream(records)
             .map(r -> processor.apply(List.of(r)))
             .flatMap(List::stream)
-            .collect(Collectors.toList());
+            .toList();
     }
 
-    public Collection toProtoCollection() {
-        return Collection
+    public com.meroxa.turbine.proto.RecordsCollection toProtoCollection() {
+        return com.meroxa.turbine.proto.RecordsCollection
             .newBuilder()
-            .setName(getName())
-            .setStream(getStream())
             .addAllRecords(getProtoRecords())
             .build();
     }
@@ -119,7 +111,20 @@ public class LocalRecords implements Records {
     }
 
     @Override
-    public void writeTo(Resource resource, String collection, ConnectionOptions options) {
-        resource.write(this, collection, options);
+    public void toDestination(String plugin, Map<String, String> configs) {
+        var configurations = Configurations.newBuilder();
+
+        for (Map.Entry<String, String> kv : configs.entrySet()) {
+            var c = Configuration.newBuilder().setField(kv.getKey()).setValue(kv.getValue()).build();
+            configurations.addConfiguration(c);
+        }
+
+        WriteToDestinationRequest request = WriteToDestinationRequest
+            .newBuilder()
+            .setPluginName(plugin)
+            .setConfiguration(configurations)
+            .build();
+
+        coreClient.writeToDestination(request);
     }
 }
